--- a/build.gradle
+++ b/build.gradle
@@ -24,8 +24,8 @@ dependencies {
 
 	// database and database boilerplate
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	implementation 'org.springframework.boot:spring-boot-starter-validation:3.1.0'
 	runtimeOnly 'org.postgresql:postgresql'
-	implementation 'org.hibernate.validator:hibernate-validator:8.0.0.Final'
 	compileOnly 'org.hibernate.orm:hibernate-jpamodelgen:6.2.3.Final'
 
 	// project boilerplate
