--- a/build.gradle
+++ b/build.gradle
@@ -34,7 +34,8 @@ dependencies {
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	implementation 'org.mapstruct:mapstruct:1.5.5.Final'
 	implementation 'org.mapstruct:mapstruct-processor:1.5.5.Final'
-	implementation 'org.springframework.boot:spring-boot-starter-aop:3.1.0'
+	runtimeOnly 'org.aspectj:aspectjrt:1.9.19'
+	runtimeOnly 'org.aspectj:aspectjweaver:1.9.19'
 
 	// security
 	implementation 'org.springframework.boot:spring-boot-starter-security'
