--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,11 +8,11 @@ spring:
     driver-class-name: org.postgresql.Driver
   jpa:
     hibernate:
-      ddl-auto: create
+      ddl-auto: none
 springdoc:
   api-docs:
     path: /api-docs
-    version: openapi_3_0
+    version: openapi_3_1
   swagger-ui:
     operations-sorter: method
     path: /swagger-ui.html
