--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,7 +8,7 @@ spring:
     driver-class-name: org.postgresql.Driver
   jpa:
     hibernate:
-      ddl-auto: none
+      ddl-auto: create
 springdoc:
   api-docs:
     path: /api-docs
@@ -16,4 +16,5 @@ springdoc:
   swagger-ui:
     operations-sorter: method
     path: /swagger-ui.html
-    version: 3.0.0
+    syntax-highlight:
+      theme: agate
