--- a/build.gradle
+++ b/build.gradle
@@ -33,7 +33,7 @@ dependencies {
 	annotationProcessor 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	implementation 'org.mapstruct:mapstruct:1.5.5.Final'
-	implementation 'org.mapstruct:mapstruct-processor:1.5.5.Final'
+	annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'
 	runtimeOnly 'org.aspectj:aspectjrt:1.9.19'
 	runtimeOnly 'org.aspectj:aspectjweaver:1.9.19'
 
