--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,4 +1,7 @@
 spring:
+  devtools:
+    livereload:
+      enabled: true
   profiles:
     active: dev
   datasource:
@@ -8,13 +11,13 @@ spring:
     driver-class-name: org.postgresql.Driver
   jpa:
     hibernate:
-      ddl-auto: create
+      ddl-auto: none
 springdoc:
   api-docs:
     path: /api-docs
-    version: openapi_3_1
   swagger-ui:
     operations-sorter: method
     path: /swagger-ui.html
     syntax-highlight:
-      theme: agate
+      theme: monokai
+      activated: true
