--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ plugins {
 }
 
 group = 'panomete'
-version = '0.0.1-SNAPSHOT'
+version = '1'
 sourceCompatibility = '17'
 
 configurations {
@@ -51,7 +51,7 @@ dependencies {
 	testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.9.3'
 	testImplementation 'org.junit.jupiter:junit-jupiter-params:5.9.3'
 	testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.3'
-	testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.3'
+	testImplementation 'org.junit.platform:junit-platform-suite-engine:1.9.3'
 	testImplementation 'org.mockito:mockito-core:5.3.1'
 	testImplementation 'org.mockito:mockito-junit-jupiter:5.3.1'
 
