--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,7 +11,7 @@ spring:
     driver-class-name: org.postgresql.Driver
   jpa:
     hibernate:
-      ddl-auto: none
+      ddl-auto: update
     database-platform: org.hibernate.dialect.PostgreSQLDialect
     database: postgresql
     properties:
@@ -27,5 +27,9 @@ springdoc:
     syntax-highlight:
       theme: monokai
       activated: true
+    try-it-out-enabled: true
+    tags-sorter: alpha
+    filter: true
+
 server:
   port: 5000
