--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,10 @@ repositories {
 	mavenCentral()
 }
 
+springBoot {
+	buildInfo()
+}
+
 dependencies {
 	// web api
 	implementation 'org.springframework.boot:spring-boot-starter-web'
